--- a/package.json
+++ b/package.json
@@ -6,21 +6,21 @@
   "type": "module",
   "scripts": {
     "compile": "tsc",
-    "tsc": "tsc && node dist/index.js",
+    "start": "tsc && node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "zachjmorrissey@gmail.com",
   "license": "MIT",
   "dependencies": {
-    "@types/express": "^4.17.2",
-    "@typescript-eslint/eslint-plugin": "^2.11.0",
-    "@typescript-eslint/parser": "^2.11.0",
     "body-parser": "^1.19.0",
-    "eslint": "^6.7.2",
-    "express": "^4.17.1",
-    "ts-node": "^8.5.4"
+    "express": "^4.17.1"
   },
   "devDependencies": {
-    "typescript": "^3.7.3"
+    "typescript": "^3.7.3",
+    "eslint": "^6.7.2",
+    "ts-node": "^8.5.4",
+    "@types/express": "^4.17.2",
+    "@typescript-eslint/eslint-plugin": "^2.11.0",
+    "@typescript-eslint/parser": "^2.11.0"
   }
 }
