--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "author": "zachjmorrissey@gmail.com",
   "license": "MIT",
   "dependencies": {
+    "@types/redis": "^2.8.14",
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "redis": "^2.8.0"
   },
   "devDependencies": {
     "typescript": "^3.7.3",
